[project]
name = "augmentcode-gauge"
version = "0.1.0"
description = "Augment Code Credits Monitor - A GUI application with embedded browser to monitor API credits"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.8.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []

